--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -268,8 +268,9 @@
                             </div>
                             <form action="" class="w-3/4 flex flex-nowrap justify-around pl-4">
                                 <div class="w-1/2 flex justify-center flex-wrap items-center">
-                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="maschio" value="maschio" name="sesso" type="radio"> maschio</div>
-                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="femmina" value="femmina" name="sesso" type="radio"> femmina</div>
+                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="maschio" value="m" name="sesso" type="radio"> Maschio</div>
+                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="femmina" value="a" name="sesso" type="radio"> Femmina</div>
+                                    <div class="w-full flex justify-center"><input class="bg-gray-200 rounded-full text-center mx-2" id="altro" value="a" name="sesso" type="radio"> Altro</div>
                                 </div>
                                 <div class="w-1/2 flex justify-end items-center">
                                     <input type="submit" class="bg-secondary text-white px-4 py-2 h-10 rounded-full" value="Cambia">
