--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="flex justify-center">
         <div class="container w-full flex justify-center">
-            <div class="lg:w-[75%] w-full">
+            <div class="lg:w-[75%] w-full min-h-screen">
                 <app-classifica [isParziale]="false">
                 </app-classifica>
             </div>
