--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -22,7 +22,7 @@
 <section>
     <div class="flex justify-center">
         <div class="container flex justify-center">
-            <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
+            <div class="lg:w-[90%] min-h-screen w-full  flex flex-wrap justify-center">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
                     <h2 class=" text-white text-4xl font-bold">
                         CLASSIFICA
