--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -11,6 +11,7 @@
     <div class="flex justify-center">
         <div class="container w-full flex justify-center">
             <div class="lg:w-[75%] w-full min-h-screen">
+                <!-- data che siamo nella pagina classifica isParziale è = a false perchè mi serve completa. Nella home è parziale quindi true  -->
                 <app-classifica [isParziale]="false">
                 </app-classifica>
             </div>
