--- a/NBA/src/app/views/errore-page/errore-page.component.html
+++ b/NBA/src/app/views/errore-page/errore-page.component.html
@@ -1,1 +1,8 @@
-<p>errore-page works!</p>
+<div class="max-h-screen h-auto min-h-screen flex flex-col justify-between">
+    <app-navbar></app-navbar>
+    <div class="w-full h-auto flex flex-wrap justify-center items-center">
+        <p class="w-full text-8xl font-bold text-center text-red-500">Err. 404</p>
+        <p class="w-full text-8xl font-bold text-center">Pagina non trovata!</p>
+    </div>
+    <app-footer></app-footer>
+</div>
