--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -39,13 +39,13 @@
                     lossStanding=false;
                     favouriteStanding=false;
                     ToggleCheckedForReset();
-                    functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)">
+                    functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)">
                     RESET FILTRI
                 </button>
             </div>
             <div class="w-1/2 lg:w-auto flex justify-center lg:justify-end">
                 <div class="rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-                    <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event);">
+                    <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding);">
                         <input id="cuore" type="checkbox" />
                         <label class="toggle-item" for="cuore">
                             <div class="block-heart">
@@ -87,7 +87,7 @@
                             crescente=!crescente;
                             winStanding=false;
                             lossStanding=false;
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">Nome </p>
                     </td>
                     <td class="w-[10%]">
@@ -97,7 +97,7 @@
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=false;
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{vittore}}</p>
                     </td>
                     <td class="w-[10%]">
@@ -107,7 +107,7 @@
                             winStanding=true;
                             crescente=!crescente;
                             lossStanding=false;
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{vinte}}</p>
                     </td>
                     <td class="w-[10%]">
@@ -117,7 +117,7 @@
                             winStanding=false;
                             lossStanding=true;
                             crescente=!crescente;
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{sconfitte}}</p>
                     </td>
                     <td class="lg:w-[10%] lg:table-cell w-0 hidden">
@@ -193,7 +193,7 @@
                             winStanding=false;
                             lossStanding=false;
 
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">Nome </p>
                     </td>
                     <td class="w-[10%]">
@@ -204,7 +204,7 @@
                             winStanding=false;
                             lossStanding=false;
 
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{vittore}}</p>
                     </td>
                     <td class="w-[10%]">
@@ -215,7 +215,7 @@
                             crescente=!crescente;
                             lossStanding=false;
 
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{vinte}}</p>
                     </td>
                     <td class="w-[10%]">
@@ -226,7 +226,7 @@
                             lossStanding=true;
                             crescente=!crescente;
 
-                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
+                            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente)
                         ">{{sconfitte}}</p>
                     </td>
                     <td class="lg:w-[10%] lg:table-cell w-0 hidden">
