--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
                     <div class="w-full">
-                        <div class="flex lg:w-full w-80% lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4 lg:justify-normal justify-between">
+                        <div class="flex lg:w-full w-80% lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-4 lg:justify-normal justify-evenly">
                             <!-- <button (click)="functionChangeManuPreferiti('tutti')" class="rounded-full lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm" [ngClass]="{'bg-secondary': menuPreferitiSelected === 'tutti', 'bg-[#ACDEFF]': menuPreferitiSelected !== 'tutti', 'text-white': menuPreferitiSelected === 'tutti'}">
                                 TUTTI
                             </button> -->
@@ -185,9 +185,14 @@
 
                     <div *ngIf="menuPreferitiSelected==='articoli'" class="w-full flex flex-wrap mt-5">
                         <ng-container *ngFor="let article of favouriteArticles, let i=index">
-                            <div class="w-1/3 flex flex-wrap my-8" [ngClass]="{'justify-start': i % 3 === 0, 'justify-end': i % 3 === 2, 'justify-center': i % 3 === 1}">
-                                <div class="w-[80%] bg-primary h-auto rounded-3xl flex items-center">
-                                    <p class="text-white text-lg text-justify py-2 px-4">{{article.blog.titolo | uppercase}}</p>
+                            <div class="lg:w-1/3 w-full flex flex-wrap my-8 justify-center" [ngClass]="{'lg:justify-start': i % 3 === 0, 'lg:justify-end': i % 3 === 2, 'lg:justify-center': i % 3 === 1}">
+                                <div class="w-[80%] bg-primary h-auto rounded-3xl flex flex-nowrap items-center">
+                                    <div class="w-[50%] h-full">
+                                        <img class="object-cover w-full h-full rounded-xl" src="{{article.blog.foto}}" alt="immagine articolo">
+                                    </div>
+                                    <div class="w-[50%] h-full">
+                                        <p class="text-white lg:text-lg text-sm py-2 px-4">{{article.blog.titolo | uppercase}}</p>
+                                    </div>
                                 </div>
                                 <div class="w-[80%] h-10 flex justify-end">
                                     <button class="px-6 py-1 text-white mt-2 bg-secondary rounded-full" (click)="aggiungiRimuoviPreferitiArticles(article.blog.id)">Rimuovi</button>
@@ -197,7 +202,7 @@
                     </div>
                     <div *ngIf="menuPreferitiSelected==='squadre'" class="w-full flex flex-wrap mt-5">
                         <ng-container *ngFor="let team of favouriteTeams, let i=index">
-                            <div class="w-1/3 flex flex-wrap my-8" [ngClass]="{'justify-start': i % 3 === 0, 'justify-end': i % 3 === 2, 'justify-center': i % 3 === 1}">
+                            <div class="lg:w-1/3 w-full flex flex-wrap my-8 justify-center" [ngClass]="{'lg:justify-start': i % 3 === 0, 'lg:justify-end': i % 3 === 2, 'lg:justify-center': i % 3 === 1}">
                                 <div class="w-[80%] bg-primary h-auto rounded-3xl flex flex-wrap">
                                     <div class="w-2/5 h-24 flex justify-center">
                                         <div class="w-20 h-20 m-2 bg-white rounded-full flex justify-center items-center">
