--- a/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
+++ b/NBA/src/app/views/articolo-detail-page/articolo-detail-page.component.html
@@ -5,7 +5,7 @@
             <div class="w-[90%]">
                 <div class="mt-10">
                     <div class="w-full h-20 bg-primary flex justify-center items-center">
-                        <h2 class=" text-white lg:text-4xl text-xl font-bold">
+                        <h2 class=" text-white lg:text-4xl text-xl font-bold text-center">
                             {{article.blog.titolo | uppercase}}
                         </h2>
                     </div>
@@ -32,27 +32,28 @@
                 <div class="lg:text-2xl text-sm p-5 text-justify">
                     {{article.paragrafi[1].testoParagrafo}}
                 </div>
-
                 <div class="w-full flex flex-wrap lg:justify-around">
-                    <div class="lg:w-1/5 w-full flex lg:justify-center" *ngFor="let _ of CountCommentForArticle, let i = index">
-                        <p class="border-primary border-4 bg-yellow-300 p-2  w-auto h-auto m-1">{{article.tags[i]}}</p>
+                    <div class="lg:w-1/5 w-full flex lg:justify-center" *ngFor="let tag of article.tags, let i = index">
+                        <p class="border-primary border-4 bg-yellow-300 p-2  w-auto h-auto m-1">{{tag}}</p>
                     </div>
                 </div>
                 <div class="h-[75vh] bg-[#ACDEFF] overflow-y-auto mt-10">
-                    <div class="" *ngFor="let _ of CountCommentForArticle">
-                        <app-card-commento class="my-5"></app-card-commento>
+                    <div class="" *ngFor="let commento of CommentForArticle">
+                        <app-card-commento [commento]="commento" class="my-5"></app-card-commento>
                     </div>
                 </div>
                 <div class="bg-[#ACDEFF] w-full min-h-[25vh]  flex flex-nowrap mt-4">
                     <div class="w-2/3 p-5">
-                        <textarea class="w-full min-h-full p-4 rounded-[25px]" placeholder="inserisci il commento" name="" id=""></textarea>
+                        <textarea class="w-full min-h-full p-4 rounded-[25px]" [(ngModel)]="newComment.commento" placeholder="inserisci il commento" name="" id="">
+
+                        </textarea>
                     </div>
                     <div class="w-1/3 m-5">
                         <div class="w-full p-5 flex justify-center ">
                             <input class="w-full rounded-full" type="text" placeholder="tag nome utente per la risposta">
                         </div>
                         <div class="w-full p-5 flex justify-center">
-                            <button class="py-2 px-4 bg-secondary rounded-full text-white">Rispondi</button>
+                            <button class="py-2 px-4 bg-secondary rounded-full text-white" (click)="functionNewComment()">Rispondi</button>
                         </div>
                     </div>
                 </div>
