--- a/NBA/src/app/views/blog-page/blog-page.component.html
+++ b/NBA/src/app/views/blog-page/blog-page.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <section>
     <div class="w-full h-20 bg-primary flex justify-center items-center">
-        <h2 class=" text-white text-4xl font-bold">
+        <h2 class=" text-white text-4xl font-bold text-center">
             BLOG
         </h2>
     </div>
