--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -2,7 +2,7 @@
 <section>
     <div class="mb-10">
         <div class="w-full h-20 bg-primary flex justify-center items-center">
-            <h2 class=" text-white text-4xl font-bold">
+            <h2 class=" text-white text-4xl font-bold text-center">
                 CALENDARIO
             </h2>
         </div>
