--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -2,7 +2,7 @@
 <section>
     <div class="mb-10">
         <div class="w-full h-20 bg-primary flex justify-center items-center">
-            <h2 class=" text-white text-4xl font-bold">
+            <h2 class=" text-white lg:text-4xl text-2xl font-bold text-center">
                 CLASSIFICA STAGIONE 2023-2024
             </h2>
         </div>
