--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -2,7 +2,7 @@
 <section class="mb-10">
     <div class="mb-10">
         <div class="w-full h-20 bg-primary flex justify-center items-center">
-            <h2 class=" text-white text-4xl font-bold">
+            <h2 class=" text-white text-4xl font-bold text-center">
                 TABELLINO
             </h2>
         </div>
@@ -80,7 +80,7 @@
                     <div class="md:w-[60%] w-[80%] h-1 bg-secondary mt-1" *ngIf="tabsSelected==='teamAway'"></div>
                 </div>
             </div>
-            <div class="lg:w-[75%] w-full h-full mt-5">
+            <div class="lg:w-[75%] w-full h-auto mt-5">
                 <table class="w-full" *ngIf="tabsSelected==='teamHome' || tabsSelected==='teamAway'">
                     <thead>
                         <tr class="h-10 border-b-4 border-white">
@@ -196,6 +196,28 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="h-4 bg-secondary w-full my-10"></div>
+            <div class="lg:w-[75%] w-full h-auto">
+                <div class="h-[75vh] bg-[#ACDEFF] overflow-y-auto">
+                    <div class="" *ngFor="let commento of CommentForGame">
+                        <app-card-commento [commento]="commento" class="my-5"></app-card-commento>
+                    </div>
+                </div>
+                <div class="bg-[#ACDEFF] w-full min-h-[25vh]  flex flex-nowrap mt-4">
+                    <div class="w-2/3 p-5">
+                        <textarea class="w-full min-h-full p-4 rounded-[25px]" [(ngModel)]="newComment.commento" placeholder="inserisci il commento" name="" id="">
+                            </textarea>
+                    </div>
+                    <div class="w-1/3 m-5">
+                        <div class="w-full p-5 flex justify-center ">
+                            <input class="w-full rounded-full" type="text" placeholder="tag nome utente per la risposta">
+                        </div>
+                        <div class="w-full p-5 flex justify-center">
+                            <button class="py-2 px-4 bg-secondary rounded-full text-white" (click)="functionNewComment()">Rispondi</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
