--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -4,7 +4,7 @@
         <div class="h-full w-full flex flex-wrap justify-center">
             <div class="w-full flex flex-wrap justify-center">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
-                    <h2 class=" text-white text-4xl font-bold">
+                    <h2 class=" text-white lg:text-4xl text-2xl font-bold text-center">
                         {{teamStatistics!.team.teamName | uppercase}}
                     </h2>
                 </div>
