--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -2,7 +2,7 @@
 <section>
     <div class="mb-10">
         <div class="w-full h-20 bg-primary flex justify-center items-center">
-            <h2 class=" text-white text-4xl font-bold">
+            <h2 class=" text-white text-4xl font-bold text-center">
                 SQUADRE
             </h2>
         </div>
@@ -24,9 +24,6 @@
     <div class="flex h-full justify-center">
         <div class="container h-full flex flex-wrap justify-center">
             <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12 " *ngIf="isConferenceSelected===true && isMobile===true || isMobile===false">
-                <div class="w-full flex justify-end pb-2">
-                    <button></button>
-                </div>
                 <div class="hidden w-full lg:flex justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">EASTERN CONFERENCE</h2>
                 </div>
@@ -97,9 +94,6 @@
                 </div>
             </div>
             <div class="lg:w-[75%] w-full h-full flex flex-wrap justify-center lg:my-12" *ngIf="isConferenceSelected===false && isMobile===true || isMobile===false">
-                <div class="w-full flex justify-end pb-2">
-                    <button></button>
-                </div>
                 <div class="hidden lg:flex w-full justify-center items-center bg-primary h-12">
                     <h2 class="font-bold text-2xl text-white pl-4">WESTERN CONFERENCE</h2>
                 </div>
