--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -87,16 +87,31 @@
                     </div>
                 </div>
                 <div class="" *ngIf="menuSelected==='risultato'">
-                    <div class="w-full h-20 bg-primary flex justify-center items-center">
-                        <h2 class=" text-white text-4xl font-bold">
-                            SONDAGGI
-                        </h2>
+                    <div class="w-full mt-20">
+                        <table class="w-full">
+                            <thead class="w-full bg-primary text-white">
+                                <tr class="w-full border-primary border-4">
+                                    <th class="w-[33.333%]">Nome</th>
+                                    <th class="w-[33.333%]">Numero Sondaggi</th>
+                                    <th class="w-[33.333%]">percentuale Sondaggi</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="w-full border-primary border-4" *ngFor="let _ of ripetiArray, let i = index">
+                                    <td class="w-[33.333%]">
+                                        <p class="text-base flex justify-start items-center"><span class="w-[50px] h-[50px] rounded-full bg-tertiary flex justify-center items-center">{{i + 1}}°</span> Nome Utente </p>
+                                    </td>
+                                    <td class="w-[33.333%]">
+                                        <p class="text-base flex justify-center items-center">{{i + 4}}</p>
+                                    </td>
+                                    <td class="w-[33.333%]">
+                                        <p class="text-base flex justify-center items-center"> {{100-(i*10)}}% </p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <div class="w-full h-6 bg-secondary"></div>
-                    <div class="w-full">
-                        <!-- <app-piechart></app-piechart> -->
-                        <!-- diagramma a torta -->
-                    </div>
+                    sotto sondaggi
                 </div>
                 <div class="" *ngIf="menuSelected==='amici'">
                     <div class="w-full h-20 bg-primary flex justify-center items-center">
