--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -47,9 +47,9 @@
             <img class="object-cover lg:w-[50%] w-[90%] rounded-full -z-10" src="../../../assets/foto-spotify.png" alt="">
         </div>
         <div class="flex justify-center items-end -z-40">
-            <button class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] relative -z-30 bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" [routerLink]="['/']">
+            <a class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] relative -z-30 bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" href="https://podcasters.spotify.com/pod/show/riccardo083">
                 SCOPRI IL NOSTRO PODCACAST
-            </button>
+            </a>
         </div>
     </div>
 </section>
