--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -219,7 +219,12 @@
                         <div class="w-full h-auto flex lg:flex-nowrap flex-wrap justify-between items-center">
                             <div class="lg:w-1/3 w-full lg:h-full h-auto flex justify-center flex-wrap items-center">
                                 <div class="lg:w-1/2 w-full flex justify-center lg:justify-start">
-
+                                    <picture>
+                                        <source srcset={{player.fotoAvif}} type="image/avif">
+                                        <source srcset={{player.fotoWebp}} type="image/webp">
+                                        <img class="max-w-full h-auto" *ngIf="player.fotoPng" height="760" width="1040" src={{player.fotoPng}} alt="foto {{player.firstName}} {{player.lastName}}" data-src="{{player.fotoPng}}">
+                                        <img *ngIf="!player.fotoPng" height="0" width="0" src={{player.fotoPng}} alt="foto {{player.firstName}} {{player.lastName}}" data-src="{{player.fotoPng}}">
+                                    </picture>
                                 </div>
                                 <div class="lg:w-1/2 w-full">
                                     <p class="w-full h-auto px-4">{{player.lastName}} {{player.firstName}}</p>
