--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -1,4 +1,4 @@
-<div class="mt-10">
+<div class="">
     <div class="lg:h-16 h-10">
         <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
@@ -12,7 +12,7 @@
             </li>
         </ul>
     </div>
-    <div class="w-full h-auto lg:mt-10 mt-10 lg:mb-5 mb-4 flex flex-wrap justify-center bottoni-classifica">
+    <div class="w-full h-auto lg:mt-10 mt-5 lg:mb-5 mb-4 flex flex-wrap justify-center bottoni-classifica">
         <div class="w-full mb-4 flex flex-nowrap lg:hidden">
             <div class="w-1/2 flex justify-center">
                 <button *ngIf="isParziale===false" class="rounded-full bg-secondary text-white lg:mr-2 lg:px-6 px-3 lg:py-1 text-sm hover:underline" [routerLink]="['/storia&regole', 'regole']">
