--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -23,12 +23,14 @@
     <div class="flex justify-center">
         <div class="container flex justify-center">
             <div class="lg:w-[90%] min-h-screen w-full  flex flex-wrap justify-center">
-                <div class="w-full h-20 bg-primary flex justify-center items-center">
-                    <h2 class=" text-white text-4xl font-bold">
-                        CLASSIFICA
-                    </h2>
+                <div class="h-auto w-full">
+                    <div class="w-full h-20 bg-primary flex justify-center items-center">
+                        <h2 class=" text-white text-4xl font-bold">
+                            CLASSIFICA
+                        </h2>
+                    </div>
+                    <div class="w-full h-6 bg-secondary"></div>
                 </div>
-                <div class="w-full h-6 bg-secondary"></div>
                 <app-classifica [isParziale]="true" class="lg:w-[85%] w-full mt-10">
 
                 </app-classifica>
