--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -45,14 +45,17 @@
 </section>
 <section>
     <div class="w-full pt-12">
+        <a class="w-full h-auto" href="https://podcasters.spotify.com/pod/show/riccardo083" target="_blank">
         <div class="flex justify-center lg:h-[150px] h-[75px] -z-10">
-            <img class="object-cover lg:w-[50%] w-[90%] rounded-full -z-10" src="../../../assets/foto-spotify.png" alt="">
+            <img class="object-cover lg:w-[50%] w-[90%] rounded-full -z-10" src="../../../assets/foto-spotify.png" alt="immagine podcast">
         </div>
-        <div class="flex justify-center items-end -z-40">
-            <a class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] relative -z-30 bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline" href="https://podcasters.spotify.com/pod/show/riccardo083">
+
+        <button class="flex w-full justify-center items-end -z-20">
+            <p class="lg:w-[40%] w-[80%] rounded-full lg:h-[70px] h-[50px] relative -z-30 bottom-6 bg-secondary lg:px-8 px-5 pt-6 text-white font-bold text-sm lg:text-xl hover:underline flex justify-center">
                 SCOPRI IL NOSTRO PODCACAST
-            </a>
-        </div>
+            </p>
+        </button>
+    </a>
     </div>
 </section>
 
